bonus/confs/repo/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: app
              port: 
                number: 80
  defaultBackend:
    service:
      name: app
      port:
        number: 80
